test/expected/simple-fs-read.txt
/scripts/simple-fs-read.js:11
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-fs-read.js:11:9)
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:445:3)
    at ReadFileContext.close (fs.js:358:11)
    at FSReqWrap.readFileAfterRead [as oncomplete] (fs.js:414:15)
    at ReadFileContext.read (fs.js:342:11)
    at FSReqWrap.readFileAfterStat [as oncomplete] (fs.js:398:11)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:374:11)
    at Object.fs.readFile (fs.js:303:11)
    at Object.<anonymous> (/scripts/simple-fs-read.js:10:4)
    at Module._compile (module.js:541:32)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.runMain (module.js:575:10)
    at run (bootstrap_node.js:340:7)
    at startup (bootstrap_node.js:132:9)
    at bootstrap_node.js:455:3
